# air-icicle

./: .gitignore  Cargo.toml  LICENSE  README.md
icicle-blake3-air/: Cargo.toml
icicle-blake3-air/benches/: benchmark.rs
icicle-blake3-air/examples/: blake3_icicle_trace_sym.rs
icicle-blake3-air/src/: air.rs  columns.rs  constants.rs  generation.rs  lib.rs
icicle-keccak-air/: Cargo.toml
icicle-keccak-air/benches/: benchmark.rs
icicle-keccak-air/examples/: keccak_icicle_trace_sym.rs
icicle-keccak-air/src/: air.rs  columns.rs  constants.rs  generation.rs  lib.rs  round_flags.rs
icicle-trace/: Cargo.toml
icicle-trace/benches/: benchmark.rs
icicle-trace/examples/: fib_icicle_trace2.rs  fib_icicle_trace_sym.rs  icicle_matrix.rs
icicle-trace/src/: air.rs  check_constraints.rs  lib.rs  symbolic_builder.rs  symbolic_expression.rs  symbolic_variable.rs  utils.rs  virtual_column.rs
icicle-trace/tests/: fib_air_trace.rs
